fix: asterix to align with link tag's label

--- a/src/LinkTag.css
+++ b/src/LinkTag.css
@@ -1,4 +1,7 @@
 .link-tag {
+  display: flex;
+  align-items: center;
+
   border-radius: var(--spacing-4);
 
   padding: 0.1rem var(--spacing-8);
